feat: add stdout redirection support with consistent error handling
Implement stdout redirection (> and 1> operators) to enable saving command
output to files. This fundamental shell feature allows users to capture
output from both builtin and external commands.

Key changes:
- Parse redirect operators in CommandExtractorUtils and extract target file
- Implement redirectOutput() in ReplEvaluator with automatic directory creation
- Standardize error handling: all commands now throw ReplException for errors
- Fix ExecutableCommand to check exit codes and report stderr on failure
- Add ReplException constructors for different error scenarios
- Update REPL to print errors to stderr and continue (no crash on errors)

Tests:
- Add 17 new tests (6 integration + 11 parsing) for redirection feature
- Fix existing tests to expect ReplException instead of error strings
- All 143 tests passing (126 original + 17 new)

Documentation:
- Update ARCHITECTURE.md with redirection flow and error handling details
- Update README.md with stdout redirection examples
- Update all command Javadocs to document exception behavior